# virtual-shops

./: README.md
client/: .eslintignore  .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx
client/src/providers/: AppProvider.tsx  index.ts
client/src/providers/query/: QueryProvider.tsx
client/src/providers/router/: RouterProvider.tsx
client/src/providers/theme/: ThemeProvider.tsx  theme.ts
client/src/routes/: index.tsx
client/src/shared/assets/: index.ts
client/src/shared/constants/: routes.ts
client/src/shared/layouts/: AppFooter.tsx  AppHeader.tsx  AppLayout.tsx
server/: docker-compose.yml  pyproject.toml
server/api/: admin.py  models.py  products.py  routes.py  schemas.py
server/api/data/: products-simple.json  products.json
server/api/management/commands/: clean_products.py  seed_products.py
server/api/migrations/: 0001_initial.py
server/core/: settings.py  storage_backends.py  urls.py
server/data/: tours-simple.json  tours-test.json
server/products/: api.py
