[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server API for the Virtual Shops eCommerce app"
authors = ["Sergio Barria"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-ninja = "^0.19.1"
cloudinary = "^1.29.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
